--- a/CRMLibrary.UI/appsettings.json
+++ b/CRMLibrary.UI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      //"Default": "Information",
+      //"Microsoft": "Trace"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
