--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-shm
 /.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-wal
 /SQL scripts/ef.txt
+/.vs/config
