--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 /.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-shm
 /.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-wal
 /SQL scripts/ef.txt
-CRM.Library.Services/obj/Debug/netcoreapp2.1/
+/.Services/obj/Debug/netcoreapp2.1/
