--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 /.vs/CRMLibrary/DesignTimeBuild/.dtbcache.v2
 /.vs/CRMLibrary/v16/.suo
 /CRM.Library.Services/bin
-/CRM.Library.Services/obj
+/CRM.Library.Services/obj/*
 /CRMLibrary.RESTAPI/bin
-/CRMLibrary.RESTAPI/obj
+/CRMLibrary.RESTAPI/obj*/
 /CRMLibrary.UI/bin
 /CRMLibrary.UI/obj
 /DAL/bin
