--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@
 /CRM.Library.Services/bin/Debug/netcoreapp2.1/CRM.Library.Services.deps.json
 /CRM.Library.Services/obj/project.assets.json
 
+/CRM.Library.Services/obj/
+
 
