--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,18 @@
-#Ignore thumbnails created by Windows
-Thumbs.db
-#Ignore files built by Visual Studio
-*.obj
-*.exe
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
-*.bak
-*.cache
-*.ilk
-*.log
-[Bb]in
-[Dd]ebug*/
-*.lib
-*.sbr
-obj/
-[Rr]elease*/
-_ReSharper*/
-[Tt]est[Rr]esult*
-.vs/
-#Nuget packages folder
-packages/
+/.vs/CRMLibrary/DesignTimeBuild/.dtbcache
+/.vs/CRMLibrary/v15/.suo
+/.vs/CRMLibrary/v15/Server/sqlite3/db.lock
+/.vs/CRMLibrary/v15/Server/sqlite3/storage.ide
+/.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-shm
+/.vs/CRMLibrary/v15/Server/sqlite3/storage.ide-wal
+/SQL scripts/ef.txt
+
+/.vs/CRMLibrary/DesignTimeBuild/.dtbcache.v2
+/.vs/CRMLibrary/v16/.suo
+/CRM.Library.Services/bin*/
+/CRM.Library.Services/obj*/
+/CRMLibrary.RESTAPI/bin*/
+/CRMLibrary.RESTAPI/obj*/
+/CRMLibrary.UI/bin*/
+/CRMLibrary.UI/obj*/
+/DAL/bin*/
+/DAL/obj*/
