--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,14 @@
 
 /.vs/CRMLibrary/DesignTimeBuild/.dtbcache.v2
 /.vs/CRMLibrary/v16/.suo
-/CRM.Library.Services/bin*/
-/CRM.Library.Services/obj*/
-/CRMLibrary.RESTAPI/bin*/
-/CRMLibrary.RESTAPI/obj*/
-/CRMLibrary.UI/bin*/
-/CRMLibrary.UI/obj*/
-/DAL/bin*/
-/DAL/obj*/
+/CRM.Library.Services/bin
+/CRM.Library.Services/obj
+/CRMLibrary.RESTAPI/bin
+/CRMLibrary.RESTAPI/obj
+/CRMLibrary.UI/bin
+/CRMLibrary.UI/obj
+/DAL/bin
+/DAL/obj
 
 
 
