--- a/CRMLibrary.UI/CRMLibrary.UI.csproj
+++ b/CRMLibrary.UI/CRMLibrary.UI.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\DAL\CRMLibrary.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
 </Project>
